# selectel

./: .env.example  .env.local  .env.selenoid  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
selectel_tests/: applications.py
selectel_tests/data/: service.py  text.py  user.py
selectel_tests/models/: api_session.py  applications.py  main_page_search.py  price_calculator_page.py  registration_page.py  sign_in_page.py
selectel_tests/models/pages/: main_page_search.py  price_calculator_page.py  registration_page.py  sign_in_page.py  user_account.py
selectel_tests/schemas/: price_plans.py  resource.py  resource_tag.py  service.py
selectel_tests/utils/: attach.py  attach_log.py  auth_cookie.py  format_view.py  generate_tag.py  json_file.py  path.py
tests/: conftest.py  test_main_page_search.py  test_price_calculator_page.py  test_registration_form.py  test_sign_in_form.py
tests/api/: conftest.py  test_authorization.py  test_dedicated_servers.py
tests/ui/: conftest.py  test_main_page_search.py  test_price_calculator_page.py  test_registration_form.py  test_sign_in_form.py  test_user_account.py
